# WEB_HW_7

./: pyproject.toml
HW_7/: models.py  my_select.py  seed.py
HW_7/alembic/: alembic.ini  env.py
