[tool.poetry]
name = "web-hw-7"
version = "0.1.0"
description = ""
authors = ["AnzhelikaKodlubovska <angelikagymnasticschannel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
